Added code to controller, repo & openAPI: creates deliveries and adds to db
