# src/main/java/be/howest/ti/mars/logic/controller/MarsController.java
@@ -5,6 +5,9 @@ import be.howest.ti.mars.logic.controller.exceptions.UsernameException;
 import be.howest.ti.mars.logic.controller.security.UserToken;
 import be.howest.ti.mars.logic.data.MarsRepository;
 
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.util.Date;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -36,6 +39,18 @@ public class MarsController {
             throw new UsernameException("Username (" + name + ") is already taken");
         }
     }
+
+    public void createDelivery(String deliveryType, int from, int destination, String date){
+        Date convertedDate = null;
+        try {
+            convertedDate = new SimpleDateFormat("dd-MM-yyyy").parse(date);
+        } catch (ParseException e) {
+            e.printStackTrace();
+        }
+        Delivery delivery = new Delivery(deliveryType, from, destination, date);
+        repo.addDelivery(delivery);
+    }
+
 
     public byte[] login(String name, String password) {
         BaseAccount account = accounts.stream()
@@ -73,4 +88,5 @@ public class MarsController {
         assert friendAccount != null;
         return user.removeFriend(friendAccount).getUsername();
     }
+
 }
