# src/main/java/be/howest/ti/mars/webserver/WebServer.java
@@ -143,8 +143,10 @@ public class WebServer extends AbstractVerticle {
         addRouteWithCtxFunction(factory, "viewFriends", bridge::viewFriends);
         addRouteWithCtxFunction(factory, "addFriend", bridge::addFriend);
         addRouteWithCtxFunction(factory, "removeFriend", bridge::removeFriend);
+        addRouteWithCtxFunction(factory, "sendPackage", bridge::sendPackage);
 
     }
+
 
     private void addRouteWithCtxFunction(OpenAPI3RouterFactory factory, String operationId, Function<RoutingContext, Object> bridgeFunction) {
         factory.addHandlerByOperationId(operationId, ctx -> handleResult(bridgeFunction.apply(ctx), ctx));
